feat(wot) add optional affordance exposure